# Arbiter

./: README.md  licence.txt  pyproject.toml  start.py
src/: buttons.py  game.py  lib.py  main.py  start.py
txt/: first_election.txt  pregame.txt  second_play.txt
txt/data/: first_election_data.txt
